--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,14 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+@import 'https://fonts.googleapis.com/icon?family=Material+Icons';
 /* You can add global styles to this file, and also import other style files */
 
 html, body {
   min-height: 100vh;
+}
+
+body {
+  background-color: #f3f3f3;
 }
