Loads of stuff - mainly authentication flow with auth0

--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -12,4 +12,4 @@
 <!--  <p>The price on this page is: {{outPrice}}</p>-->
 <!--</div>-->
 
-<button mat-flat-button class="mt-5 bg-white" [routerLink]="'/tracker'">Tracker main</button>
+<button mat-flat-button class="mt-5 bg-white" [routerLink]="'/app'">Tracker main</button>
