--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-<router-outlet></router-outlet>
+<div class="container" *ngIf="auth.isLoading$ | async; else loaded">
+  <p>Loading...</p>
+</div>
+
+<ng-template #loaded>
+  <router-outlet></router-outlet>
+</ng-template>
