--- a/src/app/components/pages/tracker-main/product-tracker/product-tracker.component.html
+++ b/src/app/components/pages/tracker-main/product-tracker/product-tracker.component.html
@@ -1,19 +1,53 @@
-<div class="w-full p-3 border rounded border-gray-400 bg-white shadow">
-  <h4>{{trackerDefinition.title}}</h4>
-
+<div class="p-3 max-h-56 min-height border rounded border-gray-300 bg-white">
   <div class="flex justify-between">
-    <div>
-      <span *ngIf="trackerDefinition.id" class="text-xs text-gray-500 mr-1">Price</span>
-      <span *ngIf="!trackerDefinition.id" class="text-xs text-gray-500 mr-1">Getting your price...</span>
-      <span>{{trackerDefinition.prettyPrice}}</span>
+    <div class="flex justify-between w-full">
+      <div class="flex flex-col">
+        <div class="text-xs lg:w-48 md:w-36 sm:w-24">{{trackerDefinition.title}}</div>
+        <div class="mt-2">
+          <sl-badge *ngIf="trackerDefinition.isAvailable" pill type="success">Available</sl-badge>
+          <sl-badge *ngIf="!trackerDefinition.isAvailable" pill type="danger">Not available</sl-badge>
+        </div>
+      </div>
+      <div class="flex flex-col">
+        <span  class="text-xs mr-2 text-gray-700 mr-1 text-right">Price</span>
+        <span class="text-lg mr-2 text-green-400 font-medium">{{trackerDefinition.id ? trackerDefinition.currentPricePretty : '...'}}</span>
+        <span class="text-sm mr-2 text-gray-500 font-medium text-right">{{trackerDefinition.id ? trackerDefinition.initialPricePretty : '...'}}</span>
+      </div>
+
     </div>
-    <button mat-icon-button
-            class="h-4"
-            (click)="remove()"
-            [disableRipple]="true">
-      <mat-icon class="text-gray-400 text-sm">cancel</mat-icon>
-    </button>
+
+    <img class="tracker-image" src="{{trackerDefinition.imageUrl}}">
+
+<!--    <button mat-icon-button-->
+<!--            class="h-4"-->
+<!--            (click)="remove()"-->
+<!--            [disableRipple]="true">-->
+<!--      <mat-icon class="text-gray-400 text-sm">cancel</mat-icon>-->
+<!--    </button>-->
   </div>
+
+  <div>
+
+    <span *ngIf="!trackerDefinition.id" class="text-xs text-gray-500 mr-1">Getting your price...</span>
+
+
+  </div>
+
+
+  <div class="flex justify-between mt-4">
+<!--    <div>-->
+<!--      <h4>Datapoints for graph</h4>-->
+<!--      <ng-container *ngFor="let datapoint of trackerDefinition.datapoints">-->
+<!--        <p class="text-sm">{{datapoint.date}} - {{datapoint.price}}</p>-->
+<!--      </ng-container>-->
+<!--    </div>-->
+
+    <div class="">
+
+    </div>
+  </div>
+
+
 
   <ng-container *ngIf="!trackerDefinition.id">
     <mat-progress-bar class="mt-3" mode="indeterminate"></mat-progress-bar>
