--- a/src/app/components/pages/tracker-main/product-tracker/product-tracker.component.scss
+++ b/src/app/components/pages/tracker-main/product-tracker/product-tracker.component.scss
@@ -3,3 +3,27 @@
   width: 16px;
   line-height: 16px;
 }
+
+.image-container{
+  height: 12rem;
+
+  @screen md {
+    max-width: 14rem;
+  }
+}
+
+.tracker-image{
+  max-width: 6rem;
+
+  @screen md {
+    max-width: 8rem;
+  }
+}
+
+.text-xs{
+  font-size:0.6rem;
+}
+
+.min-height{
+  min-height: 12rem;
+}
