--- a/src/app/components/pages/tracker-main/tracker-main.component.html
+++ b/src/app/components/pages/tracker-main/tracker-main.component.html
@@ -1,16 +1,34 @@
-<div class="w-1/2 ml-auto mr-auto">
-  <div class="flex justify-between mt-5">
-    <h2>Products: {{activeTrackers.length}}/2</h2>
-    <button mat-flat-button
-            class="bg-blue-500 text-white shadow border border-white"
-            (click)="openAddTrackerDialog()" [disabled]="activeTrackers.length >= 2">Add new tracker</button>
-  </div>
+<app-nav-bar></app-nav-bar>
 
-  <div class="mt-5">
-    <ng-container *ngFor="let tracker of activeTrackers">
-      <div class="mb-2">
-        <app-product-tracker [trackerDefinition]="tracker" (removeEmitter)="removeTracker($event)"></app-product-tracker>
+<div class="">
+  <div class="container mt-4 ml-auto mr-auto">
+
+
+
+    <div class="flex justify-between items-center mb-5">
+      <p class="text-sm text-gray-600 ">Products: {{activeTrackers.length}}/2</p>
+      <button mat-flat-button
+              class="bg-blue-500 text-white shadow border border-white"
+              (click)="openAddTrackerDialog()" [disabled]="activeTrackers.length >= 22">Add new tracker</button>
+    </div>
+
+    <div class="w-full p-3 border border-gray-300 bg-white rounded">
+      <div class="flex flex-row justify-between items-center">
+        <p class="text-sm text-gray-600 ">Welcome back, <span class="text-gray-800 font-medium">{{_userService.auth0UserData.email}}</span> - Let's get started.</p>
       </div>
-    </ng-container>
+    </div>
+
+    <div class="tracker-container mt-5">
+      <ng-container *ngFor="let tracker of activeTrackers; last as lastChild">
+        <app-product-tracker
+          class="flex-1 mb-4 sm:mb-0"
+          [trackerDefinition]="tracker"
+          (removeEmitter)="removeTracker($event)"></app-product-tracker>
+<!--        <div *ngIf="!lastChild" class="m-2"></div>-->
+      </ng-container>
+
+    </div>
+
   </div>
 </div>
+
