--- a/src/app/components/pages/tracker-main/product-tracker/product-tracker.component.scss
+++ b/src/app/components/pages/tracker-main/product-tracker/product-tracker.component.scss
@@ -5,18 +5,32 @@
 }
 
 .image-container{
-  height: 12rem;
+  max-height: 6rem;
+  width: 8rem;
 
-  @screen md {
-    max-width: 14rem;
+  @screen lg {
+    max-height: 8rem;
+    width: 10rem;
   }
 }
 
 .tracker-image{
-  max-width: 6rem;
+  max-height: 6rem;
+  //width: 8rem;
 
-  @screen md {
-    max-width: 8rem;
+  @screen lg {
+    max-height: 8rem;
+    //width: 10rem;
+  }
+}
+
+.image-skeleton{
+  height: 6rem;
+  width: 8rem;
+
+  @screen lg {
+    height: 8rem;
+    width: 10rem;
   }
 }
 
@@ -24,6 +38,33 @@
   font-size:0.6rem;
 }
 
-.min-height{
-  min-height: 12rem;
+.tracker-height{
+  height: 12rem;
+}
+
+.current-price-position{
+  position: relative;
+  top: -5px;
+}
+
+.text-overflow{
+  @apply truncate;
+
+  @screen xl {
+    overflow: unset;
+    text-overflow: unset;
+    white-space: unset;
+  }
+}
+
+.skeleton-font-size{
+  font-size: 3rem;
+}
+
+.pill-font-size{
+  font-size: 0.7rem;
+}
+
+.mat-chip.mat-standard-chip{
+
 }
