--- a/src/app/components/pages/tracker-main/tracker-main.component.html
+++ b/src/app/components/pages/tracker-main/tracker-main.component.html
@@ -14,7 +14,7 @@
 
     <div class="w-full p-3 border border-gray-300 bg-white rounded">
       <div class="flex flex-row justify-between items-center">
-        <p class="text-sm text-gray-600 ">Welcome back, <span class="text-gray-800 font-medium">{{_userService.auth0UserData.email}}</span> - Let's get started.</p>
+        <div class="text-sm text-gray-600 ">Welcome back, <span class="text-gray-800 font-medium">{{_userService.auth0UserData.email}}</span> - Let's get started.</div>
       </div>
     </div>
 
