--- a/src/app/components/pages/tracker-main/product-tracker/product-tracker.component.scss
+++ b/src/app/components/pages/tracker-main/product-tracker/product-tracker.component.scss
@@ -25,11 +25,11 @@
 }
 
 .image-skeleton{
-  height: 6rem;
+  height: 100%;
   width: 8rem;
 
   @screen lg {
-    height: 8rem;
+    height: 100%;
     width: 10rem;
   }
 }
@@ -44,7 +44,7 @@
 
 .current-price-position{
   position: relative;
-  top: -5px;
+  top: -3px;
 }
 
 .text-overflow{
@@ -61,10 +61,12 @@
   font-size: 3rem;
 }
 
-.pill-font-size{
-  font-size: 0.7rem;
-}
-
 .mat-chip.mat-standard-chip{
 
+}
+
+.pill-text{
+  position: relative;
+  top: 1px;
+  font-size: 0.7rem;
 }
