--- a/src/app/components/orphan-components/nav-bar/nav-bar.component.html
+++ b/src/app/components/orphan-components/nav-bar/nav-bar.component.html
@@ -2,7 +2,7 @@
   <div class="container ml-auto mr-auto h-full">
     <div class="flex justify-between h-full">
       <div class="mt-auto mb-auto">
-        <span>Product tracker</span>
+        <span [routerLink]="'/app'">Product tracker</span>
       </div>
       <app-auth-button class="mt-auto mb-auto"></app-auth-button>
     </div>
