--- a/src/app/components/pages/tracker-main/add-tracker-dialog/add-tracker-dialog.component.html
+++ b/src/app/components/pages/tracker-main/add-tracker-dialog/add-tracker-dialog.component.html
@@ -1,9 +1,24 @@
 <div class="bg-white">
-  <p>Enter a URL below to track the product on the webpage.</p>
-  <input [(ngModel)]="inputUrl" class="w-full">
+  <div><span class="text-gray-600 text-lg">Add tracker</span></div>
+  <p class="text-gray-400">Enter a URL below to track the product on the webpage.</p>
+  <form [formGroup]="form">
+    <input [formControlName]="'url'" class="w-full">
+  </form>
+
+
+  <div *ngIf="isWorking !== undefined" class="mt-2">
+    <div class="text-green-500" *ngIf="isWorking">
+      <fa-icon [icon]="faCheckCircle"></fa-icon>
+      <span class="ml-2">This website is confirmed as working.</span>
+    </div>
+    <div class="text-yellow-500" *ngIf="!isWorking">
+      <fa-icon [icon]="faQuestionCircle"></fa-icon>
+      <span class="ml-2">We cannot confirm this website is working.</span>
+    </div>
+  </div>
 
   <div class="flex justify-between p-2">
-    <button mat-flat-button class="bg-blue-500 text-white" (click)="submit()">Okay</button>
+    <button mat-flat-button class="bg-blue-500 text-white" (click)="submit()" [disabled]="!canContinue">Okay</button>
     <button mat-flat-button class="bg-gray-600 text-white" (click)="close()">Cancel</button>
   </div>
 </div>
