--- a/src/app/components/pages/tracker-main/tracker-main.component.scss
+++ b/src/app/components/pages/tracker-main/tracker-main.component.scss
@@ -13,11 +13,11 @@
   @apply flex;
   @apply flex-col;
 
-  @screen sm {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    //grid-template-rows: 1fr;
-    gap: 20px 20px;
-    grid-template-areas: "left-column right-column";
-  }
+  //@screen sm {
+  //  display: grid;
+  //  grid-template-columns: 1fr 1fr;
+  //  //grid-template-rows: 1fr;
+  //  gap: 20px 20px;
+  //  grid-template-areas: "left-column right-column";
+  //}
 }
