--- a/src/app/components/pages/tracker-main/product-tracker/product-tracker.component.scss
+++ b/src/app/components/pages/tracker-main/product-tracker/product-tracker.component.scss
@@ -15,13 +15,16 @@
 }
 
 .tracker-image{
-  max-height: 6rem;
-  //width: 8rem;
-
-  @screen lg {
-    max-height: 8rem;
-    //width: 10rem;
-  }
+  max-width:100%;
+  max-height:100%;
+  margin: auto;
+  //max-height: 6rem;
+  ////width: 8rem;
+  //
+  //@screen lg {
+  //  max-height: 8rem;
+  //  //width: 10rem;
+  //}
 }
 
 .image-skeleton{
@@ -30,11 +33,15 @@
 
   @screen lg {
     height: 100%;
-    width: 10rem;
+    width: 9rem;
   }
 }
 
 .text-xs{
+  font-size:0.7rem;
+}
+
+.text-xxs{
   font-size:0.6rem;
 }
 
@@ -80,16 +87,30 @@
   font-size: 0.8rem;
 }
 
-.available-position{
-  position: relative;
-  top: 18px;
-  right: 15px;
-}
-
 .cross-overlay{
   position: relative;
   font-size: 27px;
   right: 6px;
   top: 1px;
   display: inline;
+}
+
+.initial-price-position{
+  position: relative;
+  top: -2px;
+}
+
+.mat-flat-button{
+  border-radius:0;
+}
+
+button.clear-button{
+  border-radius: 0;
+  border: 1px solid;
+  @apply border-gray-300;
+}
+
+.button-text-adjustment{
+  position: relative;
+  top: -3px;
 }
