--- a/src/app/components/orphan-components/auth-button/user-menu/user-menu.component.html
+++ b/src/app/components/orphan-components/auth-button/user-menu/user-menu.component.html
@@ -1,9 +1,9 @@
-<div *ngIf="_userService.auth0UserData">
+<div *ngIf="_firebaseAuth.isLoggedIn">
   <div class="flex flex-row"
   [matMenuTriggerFor]="menu"
   (menuOpened)="menuOpened()"
   (menuClosed)="menuClosed()">
-    <img src="{{_userService.auth0UserData.picture}}"
+    <img src="null"
     class="h-8 rounded-2xl"
     alt="avatar"
     />
