--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,6 @@
-<div class="container" *ngIf="auth.isLoading$ | async; else loaded">
-  <p>Loading...</p>
-</div>
+<!--<div class="container" *ngIf="auth.isLoading$ | async; else loaded">-->
+<!--  <p>Loading...</p>-->
+<!--</div>-->
 
-<ng-template #loaded>
-  <router-outlet></router-outlet>
-</ng-template>
+<router-outlet></router-outlet>
+
